--- a/monitor.html
+++ b/monitor.html
@@ -38,7 +38,7 @@
 
 
           <li class="nav-item">
-            <a class="nav-link" href="centrales.html">Centrales</a>
+            <a class="nav-link" href=""></a>
           </li>
 
 
