--- a/monitor.html
+++ b/monitor.html
@@ -44,7 +44,7 @@
 
            <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu
+          Configuración
         </a>
 
 
