--- a/centrales.html
+++ b/centrales.html
@@ -34,7 +34,7 @@
 
           <li class="nav-item active">
 
-           <a class="nav-link" href="monitor.html">Centrales</a>
+           <a class="nav-link" href=""></a>
 
 
           </li>
@@ -42,7 +42,7 @@
 
            <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu
+          Configuracion
         </a>
 
 
@@ -62,10 +62,7 @@
             <a class="nav-link" href="/index.html">Cerrar Sesión</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+       
       </div>
     </nav>
 
